# restaurant-ops-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: channel_rules.example.json
docs/: architecture.md  data-contract.md  maintainer-guide.zh-CN.md  maintenance.md  methodology.md  product-priorities.zh-CN.md  roadmap.md
examples/: synthetic_payments.csv  synthetic_sales.csv  synthetic_sales_previous.csv
scripts/: prepublish_scan.py
src/restaurant_ops_toolkit/: __init__.py  channels.py  cli.py  io.py  metrics.py
tests/: test_metrics.py
